--- a/index.html
+++ b/index.html
@@ -9,8 +9,7 @@
 <!--[if lt IE 9]>
 <script src="http://html5shiv.googlecode.com/svn/trunk/html5.js"></script>
 <![endif]-->
-<title> ूाचीन बया योग सस्
-                       ं थान</title>
+<title> Prachin Kriya Yog Sansthan</title>
 <link rel="stylesheet" type="text/css" href="lwarp_sagebrush.css" />
 
 <script>
